--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "game": "webpack-dev-server --config webpack-game-dev.config.js --progress --colors",
+    "gg": "webpack --config webpack-game-pro.config.js --progress --colors",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
